deploy: 4ed6ee6a27657803ee7b09db3e6db38fb163bf32

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BHgbY_eq.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.R5qEiRtB.js"></script>
+    <script type="module" src="/assets/app.TvqRtJz4.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.D8sT_R4b.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.Do31HR_9.js">
     <link rel="modulepreload" href="/assets/chunks/framework.UtM2fnOC.js">
     <link rel="modulepreload" href="/assets/index.md.CThoKnQd.lean.js">
     <meta name="theme-color" content="#0ea5e9">
