--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/assets/style.BHgbY_eq.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.R5qEiRtB.js"></script>
+    <script type="module" src="/assets/app.TvqRtJz4.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <meta name="theme-color" content="#0ea5e9">
     <link rel="icon" href="/favicon.ico">
